# docx-ai-risk-analyzer

./: .gitignore  AGENTS.md  README.md  package.json
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/docx_ai_risk_api/: main.py  schemas.py
apps/api/src/docx_ai_risk_api/analyzer/: extraction.py  heuristics.py
apps/api/src/docx_ai_risk_api/routes/: analyze.py
apps/api/tests/: test_api.py
apps/web/: .env.example
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: analyzer-upload-form.tsx
docs/: README.md  stage-1-roadmap.md  strategic-roadmap.md
docs/workflow/: chatgpt-implementation-output-protocol.md  github-pr-orchestration.md  pr-body-and-extended-description-contract.md  project-development-rules.md  project-language-rules.md
