[project]
name = "docx-ai-risk-api"
version = "0.1.0"
description = "FastAPI backend for local DOCX AI-risk analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.0",
    "python-docx>=1.2.0",
    "pandas>=3.0.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
